<resources>
    <string name="app_name">StosPrzepelniony</string>
    <string name="app_fullname">Stos Przepełniony</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="remember_me">Auto sign-in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_info">To reset your password, enter the email address you use to sign in www.stosprzepelniony.pl</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_more_first_part">Need help? Learn more about how to</string>
    <string name="reset_password_more_second_part">retrieve an existing account.</string>
    <string name="no_account_info">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="contact_us">Contact us</string>
    <string name="logo_stos">stos</string>
    <string name="logo_przepelniony">przepełniony</string>
    <string name="email_contact">contact@stosprzepelniony.pl</string>
    <string name="new_advertisement">New advertisement</string>
    <string name="subject">Subject</string>
    <string name="categories">Categories</string>
    <string name="content">Content</string>
    <string name="per_hour">per hour</string>
    <string name="total_cost">total cost</string>
    <string name="salary">Salary</string>
    <string name="please_wait">Please wait</string>
    <string name="adding_ad">Adding advertisement…</string>
    <string name="settings">Settings</string>
    <string name="no_messages">No messages yet</string>
    <string name="inbox">Inbox</string>
    <string name="type_message_hint">Type message...</string>

    <string name="menu_search">Search</string>
    <string name="menu_filter_list">Filter</string>
    <string name="menu_advertisements">Advertisements</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Exceptions -->
    <string name="error_empty_password">Password field is empty.</string>
    <string name="error_incorrect_email">E-mail address is incorrect or empty. Please try again.</string>
    <string name="error_default">Something gone wrong.</string>
    <string name="error_not_identical_passwords">Passwords are not identical.</string>
    <string name="error_empty_first_name">First name field is empty.</string>
    <string name="error_empty_last_name">Last name field is empty.</string>
    <string name="error_empty_subject_field">Subject field is empty.</string>
    <string name="error_incorrect_salary">Salary value is incorrect or empty.</string>
    <string name="error_no_salary_type">You have to specify type of salary.</string>
    <string name="error_too_short_description">Minimum length of description is 20 characters.</string>
    <string name="error_no_category">You have to choose advertisement category.</string>
    <string name="error_empty_message">Message field is empty.</string>

    <string name="register_success">Your account has been successfully created. Please check your email for the instructions how to confirm your account.</string>
    <string name="reset_password_success">Success! You will receive an email with a link to reset your password.</string>
    <string name="add_advertisement_confirmation">Advertisement has been added.</string>

</resources>
